[package]
name = "bellande_mesh_sync"
version = "0.0.1"
edition = "2021"
authors = ["Ronaldson Bellande <ronaldsonbellande@gmail.com>"]
description = "Advanced peer-to-peer data synchronization system for distributed applications"
license = "GPL-3.0-or-later"
repository = "https://github.com/Architecture-Mechanism/bellande_mesh_sync"
documentation = "https://bellande-architecture-mechanism-research-innovation-center.org/bellande_mesh_sync/docs"
readme = "README.md"
keywords = ["synchronization", "distributed-systems", "mesh-network", "bellande_mesh_sync"]
categories = ["network-programming", "asynchronous"]

[lib]
path = "src/bellande_mesh_sync.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper-rustls = { version = "0.24", features = ["http1", "http2"] }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
uuid = { version = "1.3", features = ["v4", "serde"] }
rustls = "0.21"
chrono = { version = "0.4", features = ["serde"] }
sled = "0.34"
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1"
tokio-rustls = "0.24"
