[package]
name = "bellande_mesh_sync"
version = "0.0.4"
edition = "2021"
authors = ["Ronaldson Bellande <ronaldsonbellande@gmail.com>"]
description = "Advanced data synchronization system for distributed applications with algorithmic architecture"
license = "GPL-3.0-or-later"
repository = "https://github.com/Architecture-Mechanism/bellande_mesh_sync"
documentation = "https://bellande-architecture-mechanism-research-innovation-center.org/bellande_mesh_sync/docs"
readme = "README.md"
keywords = ["synchronization", "distributed-systems", "mesh-network", "bellande_mesh_sync"]
categories = ["network-programming", "asynchronous"]

[lib]
path = "src/bellande_mesh_sync.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper-rustls = { version = "0.24", features = ["http1", "http2"] }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
futures = "0.3"
rustls = "0.21"
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1"
tokio-rustls = "0.24"

# Bellande Architecture
bellande_step = "0.1.1"
bellande_limit = "0.1.1"
bellande_node_importance = "0.1.0"
bellande_particle = "0.1.1"
bellande_probability = "0.1.1"
# bellande_tree = "0.1.0"
# bellande_segment = "0.1.0"
